@@ -20,18 +20,40 @@ import de.kvwl.n8dA.infrastructure.commons.util.NetworkUtils;
 /**
  * GUI-loser Client als Verbindung zum zentralen Punkte-Server.
  */
-public class CreditAccessClient implements CreditAccess
-{
+public class CreditAccessClient implements CreditAccess {
 
-	private static final Logger LOG = LoggerFactory.getLogger(CreditAccessClient.class);
+	private static final Logger LOG = LoggerFactory
+			.getLogger(CreditAccessClient.class);
 
 	private CreditAccesHandler server;
 	private UUID uuid;
 	private String ipAdressServer;
-	
-	public CreditAccessClient(String ipAdressServer)
-	{
-		System.setSecurityManager(new SecurityManager());
+
+	public CreditAccessClient(String ipAdressServer) {
+
+		// TODO Timo: Bau das mal auf Startparameter um
+		/*
+		 * Notes:
+		 * 
+		 * The URL can be any regular URL or simply the name of a policy file in
+		 * the current directory, as in
+		 * 
+		 * java -Djava.security.manager -Djava.security.policy=mypolicy SomeApp
+		 * 
+		 * The "-Djava.security.manager" argument ensures that the default
+		 * security manager is installed, and thus the application is subject to
+		 * policy checks. It is not required if the application SomeApp installs
+		 * a security manager.
+		 * 
+		 * If you use
+		 * 
+		 * java -Djava.security.manager -Djava.security.policy==someURL SomeApp
+		 * 
+		 * (note the double equals) then just the specified policy file will be
+		 * used; all the ones indicated in the security properties file will be
+		 * ignored.
+		 */
+		// System.setSecurityManager(new SecurityManager());
 		BasicConfigurator.configure();
 		this.ipAdressServer = ipAdressServer;
 		this.uuid = UUID.randomUUID();
@@ -43,9 +65,10 @@ public class CreditAccessClient implements CreditAccess
 	 * @throws NotBoundException
 	 * @throws MalformedURLException
 	 */
-	public void initConnectionToServer() throws RemoteException, MalformedURLException, NotBoundException
-	{
-		String url = "//" + ipAdressServer + "/" + NetworkUtils.REWARD_SERVER_NAME;
+	public void initConnectionToServer() throws RemoteException,
+			MalformedURLException, NotBoundException {
+		String url = "//" + ipAdressServer + "/"
+				+ NetworkUtils.REWARD_SERVER_NAME;
 		server = (CreditAccesHandler) Naming.lookup(url);
 		LOG.info("Client: " + uuid + " connected to Server");
 	}
@@ -53,41 +76,35 @@ public class CreditAccessClient implements CreditAccess
 	/**
 	 * Ruft den Punktestand f�r den �bergebenen Namen vom Server ab
 	 */
-	public int getConfigurationPointsForPerson(String name) throws NoSuchPersonException, RemoteException
-	{
+	public int getConfigurationPointsForPerson(String name)
+			throws NoSuchPersonException, RemoteException {
 		return server.getConfigurationPointsForPerson(name);
 	}
 
 	// TODO: Timo: Nur zu Testzwecken. Sp�ter entfernen.
-	public static void main(String[] args) throws Exception
-	{
+	public static void main(String[] args) throws Exception {
 
 		CreditAccessClient client = new CreditAccessClient("localhost");
-		try
-		{
+		try {
 			client.initConnectionToServer();
-			
-			client.persistConfigurationPointsForPerson("Derp","TestGame", 5);
-			client.persistConfigurationPointsForPerson("Derp","TestGame", 6);
+
+			client.persistConfigurationPointsForPerson("Derp", "TestGame", 5);
+			client.persistConfigurationPointsForPerson("Derp", "TestGame", 6);
 			System.out.println(client.getAllGamesForPersonName("Derp"));
-		}
-		catch (RemoteException e)
-		{
+		} catch (RemoteException e) {
 			LOG.error("Remote Error", e);
 		}
 	}
 
 	@Override
-	public void persistConfigurationPointsForPerson(String personName, String gameName, int points)
-			throws RemoteException {
-		server.persistConfigurationPointsForPerson(personName,gameName, points);
+	public void persistConfigurationPointsForPerson(String personName,
+			String gameName, int points) throws RemoteException {
+		server.persistConfigurationPointsForPerson(personName, gameName, points);
 	}
-	
-	public List<GamePerson> getAllGamesForPersonName(String personName) throws RemoteException
-	{
+
+	public List<GamePerson> getAllGamesForPersonName(String personName)
+			throws RemoteException {
 		return server.getAllGamesForPersonName(personName);
 	}
-	
-	
 
 }
